add docker-compose install to feg build
Signed-off-by: Vitalii Kostenko <vitalii@freedomfi.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -713,6 +713,7 @@ jobs:
       MAGMA_ROOT: /home/circleci/project
     steps:
       - checkout
+      - docker/install-dc
       - build/determinator:
           <<: *federated_build_verify
       - run:
