Add LI Agent Code (#4158)
* Intitial LI Agent code

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add initial logic

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add directoryd call

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Initial openssl code

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Run Linter

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* remove extra file

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix interface configuration

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add sigpipe ignore

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix Directoryd call

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Move to pointer instead of vector alloc

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* minor fixes

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Gen pb

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Partially implement comments

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* More refactoring

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Reefactor

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Return to blocking sigpipe

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Implement requested changes

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Implement some requested changes

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Disable failing unit test

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Remove testing code

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix lint

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fixes

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix circle conf

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix circle

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix typo

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix Makefile

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add lib req

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

--- a/lte/gateway/deploy/roles/magma/tasks/main.yml
+++ b/lte/gateway/deploy/roles/magma/tasks/main.yml
@@ -41,6 +41,7 @@
     - lighttpd
     - sessiond
     - connectiond
+    - liagentd
   when: full_provision
 
 - name: Copy sctpd service file
@@ -134,6 +135,10 @@
 
 - name: Create symlink for connectiond binary
   file: src='{{ c_build }}/connection_tracker/connectiond' path=/usr/local/bin/connectiond state=link force=yes follow=no
+  when: full_provision
+
+- name: Create symlink for li agent binary
+  file: src='{{ c_build }}/li_agent/liagentd' path=/usr/local/bin/liagentd state=link force=yes follow=no
   when: full_provision
 
 - name: Create symlink for corefile collection script
@@ -385,6 +390,7 @@
     - eth0
     - mtr0
     - ipfix0
+    - li_port
   when: full_provision
 
 - name: Copy ryu ipfix patch
