fixes and workaround for bugs found during IT testing og magma-5g branch
Signed-off-by: ashish-acl <ashish.t@altencalsoftlabs.com>

--- a/lte/gateway/c/oai/tasks/amf/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/amf/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(TASK_AMF_APP
     amf_Security_Mode.cpp
     deregistration_request.cpp
     amf_app_pdu_resource_setup_req_rel.cpp
+    nas5g_message.cpp
     ${PROTO_SRCS}
     ${PROTO_HDRS}
 )
