--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -991,7 +991,7 @@ jobs:
             ansible-playbook devops-provision.yaml -e "dirLocalInventory=~/magma-experimental/files"
             ansible-playbook cloudstrapper-provision.yaml  -e "dirLocalInventory=~/magma-experimental/files"
             ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm -e "dirLocalInventory=~/magma-experimental/files"
-            ansible-playbook ami-init.yaml -e "dirInventory=~/magma-experimental/files"
+            ansible-playbook devops-init.yaml  -e "dirLocalInventory=~/magma-experimental/files" 
       - magma_slack_notify
 
   ## CWF OPERATOR
