[AGW][MME][OAI][CI] Performs a complete image build during master morning checks (#6310)
* [AGW][MME][OAI] having a dedicated tag for daily master runs

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [AGW][MME][OAI][CI] building from scratch on daily builds

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [AGW][MME][OAI][CI] cleaning workspace on the RHEL8 agent

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [CI][RHEL] Missing to copy the RHEL8 credentials

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [CI][OAI] better handle of failures

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [CI][OAI][MME] Fix the report of the image size

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [MME][DOCKER][RHEL8] the CMakefile patch is not required anymore

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* [MME][DOCKER] Missing label and port expose on some dockerfiles

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* CI: fix OAI MME dockerfiles: simplier telegraf install and removed libtins in RHEL

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

* DOCKER: remove duplicate install of telegraf and quieter downloads

Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/lte/gateway/docker/mme/Dockerfile.rhel8
+++ b/lte/gateway/docker/mme/Dockerfile.rhel8
@@ -95,7 +95,6 @@ RUN yum install -y \
     libgcrypt-devel \
     # Install libgtpnl requirements
     libmnl-devel \
-    libtins-dev \
     # Install Nettle requirements
     libconfig-devel \
     libxml2-devel \
@@ -131,7 +130,6 @@ COPY  lte/gateway/c/oai/patches/folly-gflagslib-fix.patch .
 COPY  lte/gateway/c/oai/patches/0001-opencoord.org.freeDiameter.patch .
 COPY  lte/gateway/c/oai/patches/libzmq-strncpy.patch .
 COPY  lte/gateway/c/oai/patches/czmq-strncat.patch .
-COPY  lte/gateway/c/oai/patches/CMake-warnings-not-errors.patch .
 
 # In some network environments, GIT proxy is required
 RUN /bin/bash -c "if [[ -v GIT_PROXY ]]; then git config --global http.proxy $GIT_PROXY; fi"
@@ -538,6 +536,12 @@ RUN sed -i -e "s@echo_error@echo@" -e "s@echo_success@echo@" -e "s@echo_warning@
 
 WORKDIR /magma-mme
 RUN openssl rand -out /root/.rnd 128
+
+# use this label for CI purpose
+LABEL use-separate-hss-realm="true"
+
+# expose ports
+EXPOSE 3870/tcp 5870/tcp 2123/udp
 
 # For the moment, let have a dummy command
 CMD ["sleep", "infinity"]
