--- a/.github/workflows/pr_bot.yml
+++ b/.github/workflows/pr_bot.yml
@@ -1,10 +1,13 @@
 ---
 name: PR Hello
 on:  # yamllint disable-line rule:truthy
+  # Use pull_request_target to gain write permissions.
+  # Ref: https://github.blog/2020-08-03-github-actions-improvements-for-fork-and-pull-request-workflows/
   pull_request_target:
     types: [opened]
 
 jobs:
+  # This job is a manual approximation of https://github.com/peter-evans/create-or-update-comment
   comment:
     runs-on: ubuntu-latest
     steps:
@@ -12,18 +15,27 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            var msg = `Thanks for opening a PR!
+            var msg = `Thanks for opening a PR! :100:
 
-            The "Reviewers" listed on for this PR are the Magma maintainers who will help shepherd this PR.
+            ### Howto
 
-            Once your PR has been approved and passed all CI checks, use the [\`ready2merge\`](https://github.com/magma/magma/labels/ready2merge) label to indicate the maintainers can merge it.
+            ***Reviews.*** The "Reviewers" listed for this PR are the Magma maintainers who will shepherd it.
+
+            ***Checks.*** All required CI checks must pass before merge.
+
+            ***Merge.*** Once approved and passing all CI checks, use the [\`ready2merge\`](https://github.com/magma/magma/labels/ready2merge) label to indicate the maintainers can merge your PR.
+
+            ### More info
+
+            [All commits must be signed off](https://magma.github.io/magma/docs/next/contributing/contribute_workflow#guidelines). This is enforced by the `DCO check`.
 
             Please take a moment to read through the Magma project's
             - [Contributing conventions](https://docs.magmacore.org/docs/next/contributing/contribute_conventions) for norms around contributed code
 
-            If this is your first time opening a PR, also consider reading
+            If this is your first Magma PR, also consider reading
             - [Developer onboarding](https://docs.magmacore.org/docs/next/contributing/contribute_onboarding) for onboarding as a new Magma developer
-            - [Development workflow](https://docs.magmacore.org/docs/next/contributing/contribute_workflow) for guidance on your first pull request`
+            - [Development workflow](https://docs.magmacore.org/docs/next/contributing/contribute_workflow) for guidance on your first pull request
+            - [CI checks](https://magma.github.io/magma/docs/next/contributing/contribute_ci_checks) for points of contact for failing or flaky CI checks`
 
             github.issues.createComment({
               issue_number: context.issue.number,
