--- a/.github/workflows/pr_bot.yml
+++ b/.github/workflows/pr_bot.yml
@@ -15,27 +15,23 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            var msg = `Thanks for opening a PR! :100:
+            var msg = `Thanks for opening a PR! :100: Please note that [all commits must be signed off](https://magma.github.io/magma/docs/next/contributing/contribute_workflow#guidelines). This is enforced by the \`DCO check\`.
 
             ### Howto
 
-            ***Reviews.*** The "Reviewers" listed for this PR are the Magma maintainers who will shepherd it.
-
-            ***Checks.*** All required CI checks must pass before merge.
-
-            ***Merge.*** Once approved and passing all CI checks, use the [\`ready2merge\`](https://github.com/magma/magma/labels/ready2merge) label to indicate the maintainers can merge your PR.
+            - ***Reviews.*** The "Reviewers" listed for this PR are the Magma maintainers who will shepherd it.
+            - ***Checks.*** All required CI checks must pass before merge.
+            - ***Merge.*** Once approved and passing all CI checks, use the [\`ready2merge\`](https://github.com/magma/magma/labels/ready2merge) label to indicate the maintainers can merge your PR.
 
             ### More info
 
-            [All commits must be signed off](https://magma.github.io/magma/docs/next/contributing/contribute_workflow#guidelines). This is enforced by the \`DCO check\`.
-
             Please take a moment to read through the Magma project's
-            - [Contributing conventions](https://docs.magmacore.org/docs/next/contributing/contribute_conventions) for norms around contributed code
+            - [Contributing Conventions](https://docs.magmacore.org/docs/next/contributing/contribute_conventions) for norms around contributed code
 
             If this is your first Magma PR, also consider reading
-            - [Developer onboarding](https://docs.magmacore.org/docs/next/contributing/contribute_onboarding) for onboarding as a new Magma developer
-            - [Development workflow](https://docs.magmacore.org/docs/next/contributing/contribute_workflow) for guidance on your first pull request
-            - [CI checks](https://magma.github.io/magma/docs/next/contributing/contribute_ci_checks) for points of contact for failing or flaky CI checks`
+            - [Developer Onboarding](https://docs.magmacore.org/docs/next/contributing/contribute_onboarding) for onboarding as a new Magma developer
+            - [Development Workflow](https://docs.magmacore.org/docs/next/contributing/contribute_workflow) for guidance on your first pull request
+            - [CI Checks](https://magma.github.io/magma/docs/next/contributing/contribute_ci_checks) for points of contact for failing or flaky CI checks`
 
             github.issues.createComment({
               issue_number: context.issue.number,
