--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1371,6 +1371,105 @@ jobs:
           tag-latest: <<parameters.tag-latest>>
       - magma_slack_notify
 
+  publish-amis-to-marketplace:
+    machine:
+      image: ubuntu-2004:202104-01
+      docker_layer_caching: true
+    parameters:
+      version:
+        description: Magma version
+        type: string
+        default: "1.5"
+    environment:
+      MAGMA_ROOT: /home/circleci/project
+      CODE_DIR: /home/circleci/project/experimental/cloudstrapper
+      VARS_DIR: /home/circleci/project/experimental/cloudstrapper/playbooks/roles/vars
+      WORK_DIR: /home/circleci/project/experimental/cloudstrapper/playbooks
+    steps:
+      - checkout
+      - run: sudo apt-get update && sudo apt -y upgrade
+      - run: pyenv install 3.7.0
+      - python/set_version:
+          python_version: "3.7.0"
+      - run:
+          name: Install Dependencies
+          command: |
+              pip install ansible awscli boto3
+              sudo apt-get update
+      - run:
+          name: Propagate secrets to ansible
+          command: |
+            sed -i -e "s@awsAccessKey:@& ${AWS_ACCESS_KEY_AMI_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+            sed -i -e "s@awsSecretKey:@& ${AWS_SECRET_ACCESS_KEY_AMI_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+      - run:
+          name: Propagate docker and helm repository (will be replaced by artifactory repos)
+          command: |
+            sed -i -e "s@gitUser:@& ${GITHUB_USER_READ_ACCESS}@1"  $VARS_DIR/secrets.yaml
+            sed -i -e "s@gitPat:@& ${GITHUB_ACCESS_TOKEN_READ_ACCESS}@1"  $VARS_DIR/secrets.yaml
+            sed -i -e "s@dockerUser:@& ${DOCKER_USERNAME_READ_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+            sed -i -e "s@dockerPassword:@& ${DOCKER_PASSWORD_READ_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+      - run:
+          name: Propagate AWS region information
+          command: |
+            sed -i -e '/^awsAgwRegion: /s/:.*$/: us-west-1/' $VARS_DIR/cluster.yaml
+            sed -i -e '/^awsOrc8rRegion: /s/:.*$/: us-west-1/' $VARS_DIR/cluster.yaml
+            sed -i -e '/^awsAgwAz: /s/:.*$/: us-west-1b/' $VARS_DIR/cluster.yaml
+            sed -i -e '/^buildAwsRegion: /s/:.*$/: us-west-1/' $VARS_DIR/build.yaml
+            sed -i -e '/^buildAwsAz: /s/:.*$/: us-west-1b/' $VARS_DIR/build.yaml
+      - run:
+          name: Propagate names for AWS essential components
+          command: |
+            sed -i -e '/^secgroupDefault: /s/:.*$/: publish-amis-to-marketplace-secgroup/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^bucketDefault: /s/:.*$/: publish-amis-to-marketplace-bucket/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^stackEssentialsDefault: /s/:.*$/: publish-amis-to-marketplace-stack/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^keyBoot: /s/:.*$/: publish-amis-to-marketplace-keyboot/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^keyHost: /s/:.*$/: publish-amis-to-marketplace-keyhost/' $VARS_DIR/defaults.yaml
+      - run:
+          name: Setup AWS essentials components
+          command: |
+            ansible-playbook $WORK_DIR/aws-prerequisites.yaml -e "dirLocalInventory=$VARS_DIR" --tags keyCreate,essentialsCreate
+      - run:
+          name: Propagate Tags for Cloudstrapper instances
+          command: |
+            sed -i -e '/^devOpsCloudstrapper: /s/:.*$/: publishAmisToMarketplaceDevopsCloudstrapper/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^primaryCloudstrapper: /s/:.*$/: publishAmisToMarketplacePrimaryCloudstrapper/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^stackDevOpsCloudstrapper: /s/:.*$/: publish-amis-to-marketplace-stack-devopscloustrapper/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^stackCloudstrapper: /s/:.*$/: publish-amis-to-marketplace-stack-cloustrapper/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^devOpsAmi: /s/:.*$/: cloudstrapper-<<parameters.version>>/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^buildUbuntuAmi: /s/:.*$/: ami-0d382e80be7ffdae5/' $VARS_DIR/build.yaml
+      - run:
+          name: Generate Cloudstrapper AMI
+          command: |
+            ansible-playbook $WORK_DIR/devops-provision.yaml -e "dirLocalInventory=$VARS_DIR"
+            echo "Waiting one minute for the instance to boot up."
+            sleep 60
+            ansible-playbook $WORK_DIR/devops-configure.yaml -e "devops=tag_Name_publishAmisToMarketplaceDevopsCloudstrapper" -e "dirLocalInventory=$VARS_DIR" -i $VARS_DIR/common_instance_aws_ec2.yaml -u ubuntu --skip-tags usingGitSshKey,buildMagma,pubMagma,helm,pubHelm
+            ansible-playbook $WORK_DIR/devops-init.yaml -e "dirLocalInventory=$VARS_DIR"
+      - notify-magma:
+          artifact_name: Cloudstrapper AWS AMI
+          version_path: "<<parameters.version>>"
+      - run:
+          name: Propagate variables for AGW AMI build
+          command: |
+            sed -i -e '/^buildAgwAmiName: /s/:.*$/: agw-ami-<<parameters.version>>/' $VARS_DIR/build.yaml
+            sed -i -e '/^buildGwTagName: /s/:.*$/: publishAmisToMarketplaceAgw/' $VARS_DIR/build.yaml
+            sed -i -e '/^awsAgwAmi: /s/:.*$/: ami-0d382e80be7ffdae5/' $VARS_DIR/cluster.yaml
+      - run:
+          name: Generate AGW AMI
+          command: |
+            ansible-playbook $WORK_DIR/agw-provision.yaml -e "idSite=DevOps" -e "idGw=publishAmisToMarketplaceAgw" -e "dirLocalInventory=$VARS_DIR" --tags createNet,createGw
+            echo "Waiting one minute for the instance to boot up."
+            sleep 60
+            ansible-playbook $WORK_DIR/ami-configure.yaml -i "$VARS_DIR/common_instance_aws_ec2.yaml" -e "dirLocalInventory=$VARS_DIR" -e "aminode=tag_Name_publishAmisToMarketplaceAgw" -e "ansible_python_interpreter=/usr/bin/python3" -u ubuntu
+            ansible-playbook $WORK_DIR/ami-init.yaml -e "dirLocalInventory=$VARS_DIR"
+      - run:
+          name: Clean AWS resources
+          command: |
+            ansible-playbook $WORK_DIR/cleanup.yaml -e "dirLocalInventory=$VARS_DIR" --tags agw,subnet,secgroup,vpc,keys --skip-tags orc8r  -e "{"deleteStacks": [stackDevOpspublishAmisToMarketplaceAgw, publish-amis-to-marketplace-stack-devopscloustrapper, publish-amis-to-marketplace-stack]}"
+      - notify-magma:
+          artifact_name: AGW AWS AMI
+          version_path: "<<parameters.version>>"
+      - magma_slack_notify
 workflows:
   version: 2
 
@@ -1440,8 +1539,10 @@ workflows:
           <<: *only_release
           requires:
             - release-hold
-
-
+      - publish-amis-to-marketplace:
+          <<: *only_release
+          requires:
+            - release-hold
   feg:
     jobs:
       - feg-lint
