--- a/lte/gateway/c/oai/test/mme_app_task/CMakeLists.txt
+++ b/lte/gateway/c/oai/test/mme_app_task/CMakeLists.txt
@@ -17,18 +17,35 @@ find_package(Check REQUIRED)
 find_package(Threads REQUIRED)
 
 include_directories("/usr/src/googletest/googlemock/include/")
+link_directories(/usr/src/googletest/googlemock/lib/)
+
 set(MME_APP_UE_CONTEXT_IMSI_SRC
     test_mme_app_ue_context.c
     )
+set(MME_APP_EMM_DECODE_SRC
+    test_mme_app_emm_decode.cpp
+    )
 
 add_executable(test_mme_app_ue_context_imsi ${MME_APP_UE_CONTEXT_IMSI_SRC})
+add_executable(test_mme_app_emm_decode ${MME_APP_EMM_DECODE_SRC})
+
 target_link_libraries(test_mme_app_ue_context_imsi
     TASK_MME_APP ${CHECK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
     LIB_BSTR LIB_HASHTABLE
     )
+target_link_libraries(test_mme_app_emm_decode
+    TASK_MME_APP TASK_NAS ${CHECK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
+    LIB_BSTR gtest gtest_main
+    )
+
 target_include_directories(test_mme_app_ue_context_imsi PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CHECK_INCLUDE_DIRS}
+    )
+target_include_directories(test_mme_app_emm_decode PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CHECK_INCLUDE_DIRS}
     )
 
 add_test(NAME test_mme_app_ue_context COMMAND test_mme_app_ue_context_imsi)
+add_test(NAME test_mme_app_emm_decode COMMAND test_mme_app_emm_decode)
