Build 5G on its branch and push to 5g registry
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1277,7 +1277,7 @@ workflows:
           <<: *only_master
       - mme-clang-warnings:
           <<: *only_master
-      - lte-integ-test:
+      - lte-integ-test
       - lte-agw-deploy:
           requires:
             - lte-test
