update lte-agw-aws pipeline
Signed-off-by: artblee <artblee@outlook.com>
Signed-off-by: artblee <61991446+artblee@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1288,6 +1288,8 @@ workflows:
             - mme_test
             - lte-integ-test
       - c-cpp-codecov
+      - lte-agw-aws
+
 
   feg:
     jobs:
