--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -68,3 +68,16 @@ jobs:
       uses: github/codeql-action/analyze@v1
       env:
         NODE_OPTIONS: --max-old-space-size=5120
+
+    # Notify ci-info channel when failing
+    # Plugin info: https://github.com/marketplace/actions/slack-notify
+
+    - name: Notify failure to slack
+      if: failure() && github.ref == 'refs/heads/master'
+      uses: rtCamp/action-slack-notify@v2.0.2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_TITLE: "Github action CodeQL-analysis ${{ matrix.language }} failed"
+        SLACK_USERNAME: "CodeQL-analysis ${{ matrix.language }} "
+        SLACK_ICON_EMOJI: ":boom:"
+        SLACK_COLOR: "#FF0000"
