Fix code analysis mem leak
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -66,3 +66,5 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
+      env:
+        NODE_OPTIONS: --max-old-space-size=5120
