--- a/lte/cloud/configs/nprobe.yml
+++ b/lte/cloud/configs/nprobe.yml
@@ -14,6 +14,16 @@
 # update_interval_secs sets the priodic time between runs in seconds.
 # backoff_interval_secs sets the backoff time when remote records collector is not
 # available.
+# delivery_function_address defines the address of the remote server collecting records.
+# exporter_key provides the absolute path to exporter tls private key.
+# exporter_crt provides the absolute path to exporter tls certificate.
+# skip_verify_server enables exporter to skip server tls certificate verifications.
+
 operator_id: 49002
 update_interval_secs: 60
 backoff_interval_secs: 360
+
+delivery_function_address: 10.10.0.2:6666
+exporter_key: /var/opt/magma/certs/client.key
+exporter_crt: /var/opt/magma/certs/client.crt
+skip_verify_server: true
