git: Ignore build/lib not lib in gitignore
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,8 @@ env/
 develop-eggs/
 dist/
 eggs/
-lib/
+build/lib/
 lib64/
-!orc8r/lib/
-!feg/radius/lib/
-!lte/gateway/c/oai/lib
 parts/
 sdist/
 var/
