--- a/lte/gateway/c/oai/tasks/mme_app/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/mme_app/CMakeLists.txt
@@ -80,7 +80,7 @@ target_link_libraries(TASK_MME_APP
   COMMON
   LIB_BSTR LIB_HASHTABLE LIB_DIRECTORYD LIB_SECU LIB_EVENT_CLIENT
   TASK_NAS TASK_S1AP TASK_SERVICE303 TASK_SCTP_SERVER
-  TASK_S6A TASK_SGS protobuf cpp_redis yaml-cpp redis_utils
+  TASK_S6A TASK_SGS protobuf cpp_redis yaml-cpp redis_utils folly
     )
 
 if (EMBEDDED_SGW)
