--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1466,10 +1466,10 @@ workflows:
           requires:
             - cwf-operator-precommit
 
-  hourly_xwfm:
+  daily_xwfm:
     triggers:
       - schedule:
-          cron: "0 * * * *"
+          cron: "0 0 * * *"
           <<: *only_master
     jobs:
       - xwfm-test:
