--- a/experimental/cloudstrapper/playbooks/roles/key-manager/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/key-manager/tasks/main.yaml
@@ -1,7 +1,13 @@
 ---
 
+- name: create target directory in Cloudstrapper
+  file:
+    path: "{{ dirLocalInventory }}"
+    state: directory
+    mode: '0755'
+
 - name: copy host key into bootstrapper
   copy:
     src: "{{ dirLocalInventory }}/{{ keyHost }}.pem"
-    dest: "{{ dirInventory }}/{{ keyHost }}.pem"
+    dest: "{{ dirLocalInventory }}/{{ keyHost }}.pem"
     mode: '0600'
